# konugolu_websites

./: .agrules.md
.claude/: CLAUDE.md  settings.local.json
portfolio_website/: .dockerignore  Cargo.toml  Dockerfile  README.md  docs.md
portfolio_website/backend/: Cargo.toml
portfolio_website/backend/src/: main.rs
portfolio_website/frontend/: Cargo.toml  index.html
portfolio_website/frontend/src/: main.rs  style.css
resume/: CV.txt  cv_ml.txt
